Fix download button overlap when embedding title is disabled

--- a/frontend/src/metabase/public/components/EmbedFrame/EmbedFrame.module.css
+++ b/frontend/src/metabase/public/components/EmbedFrame/EmbedFrame.module.css
@@ -161,7 +161,7 @@ body:where(:global(.mb-wrapper)) {
   position: absolute;
   right: 1rem;
   top: 0.5rem;
-  z-index: 1;
+  z-index: 5;
 }
 
 .CompactExportAsPdfButton.ParametersVisibleWithNoTabs {
@@ -170,7 +170,7 @@ body:where(:global(.mb-wrapper)) {
   /* (metabase#59503) We want to fix this differently (here's the first attempt https://github.com/metabase/metabase/pull/59418).
   So we should just make this work for this particular case for now rather than marking a markup change.
 
-  The reason we need `z-index: 4` here is because the parameter container is defined after this download button in the DOM, and it
-  has `z-index: 3`. */
-  z-index: 4;
+  The reason we need `z-index: 6` here is because the parameter container is defined after this download button in the DOM, and it
+  has `z-index: 3`. We use z-index 6 to be higher than the base CompactExportAsPdfButton z-index 5. */
+  z-index: 6;
 }
